--- a/css/style.css
+++ b/css/style.css
@@ -1,8 +1,11 @@
 body{
     background: #000;
     margin: 0px;
+    font-family: sans-serif;
 }
 h1{
     text-align: center;
     padding-top: 20%;
+    color: #fff;
+    text-transform: uppercase;
 }
